--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ python:
 # command to install dependencies
 #install: "pip install -r requirements.txt"
 # command to run tests
-script: #how are we going to handle this?
+script:
+  - python test_linked_list.py
+  - python test_stack.py
