--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - python tests/test_queue.py
   - python tests/test_hash_table.py
   - python tests/test_make_month.py
-  - python tests/test_insertion_sort.py
+  - python tests/test_sorts.py
